--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,14 +1,14 @@
 backend:
   name: github
-  repo: martinacurrenti/mybrookesblog # Path to your GitHub repository
+  repo: martinacurrenti/prettyinfont # Path to your GitHub repository
   branch: master # Branch to update (master by default)
-  site_domain: thefinalnote.netlify.app #Your site on netlify
+  site_domain: prettyinfont.netlify.app #Your site on netlify
   use_graphql: true
 
 publish_mode: editorial_workflow
 show_preview_links: true
-display_url: https://thefinalnote.netlify.app
-logo_url: https://thefinalnote.netlify.app/uploads/face.jpg
+display_url: https://prettyinfont.netlify.app
+logo_url: https://prettyinfont.netlify.app/uploads/face.jpg
 
 # Do NOT edit below this line
 
