--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # SITE CONFIGURATION
 baseurl: ''  #leave this alone
-url: "https://thefinalnote.netlify.app"   #change this to yours
-repository: martinacurrenti/mybrookesblog
+url: "https://prettyinfont.netlify.app"   #change this to yours
+repository: martinacurrenti/prettyinfont
 # twitter_username: pageboy  #change to your own twitter account
 lang: en_gb
 timezone: UTC
