--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,11 +1,11 @@
-title: Your name or name of site
-description: A website with a blog
-header_text: My Dream Blog
-footer_text: Copyright 2020 Your name
+title: Pretty in Font
+description: A blog about the most iconic romcoms and their titles' font
+header_text: ""
+footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/pages.jpg
-bannerheight: "20vmax"
-gridlayout: false
+bannerheight: 20vmax
 logo: /uploads/logo.jpg
 favicon: /uploads/favicon.ico
-upzoom: true
+gridlayout: false
 fixednavbar: false
+upzoom: true
