--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/pages.jpg
 bannerheight: 20vmax
-logo: /uploads/logo.jpg
+logo: ../uploads/2.png
 favicon: /uploads/favicon.ico
 gridlayout: false
 fixednavbar: false
