--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,10 +3,10 @@ description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/pretty-in.png
-bannerheight: 20vmax
+bannerheight: 10vmax
 logo: ../uploads/2.png
 favicon: ../uploads/3.png
 gridlayout: false
 fixednavbar: false
-upzoom: true
+upzoom: false
 items: []
