--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ""
+header_feature_image: ../uploads/screenshot-2020-09-25-at-12.38.29.png
 bannerheight: 10vmax
 logo: ../uploads/2.png
 favicon: ../uploads/3.png
