--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/screenshot-2020-09-25-at-12.38.29.png
 bannerheight: 10vmax
 logo: ../uploads/1.png
-favicon: ../uploads/2.png
+favicon: ../uploads/favicon.png
 gridlayout: false
 fixednavbar: true
 upzoom: true
