Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/progetto-senza-titolo-1-.gif
 bannerheight: 10vmax
-logo: ../uploads/1.png
+logo: ../uploads/newicons.gif
 favicon: ../uploads/favicon.png
 gridlayout: false
 fixednavbar: true
