--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ../uploads/progetto-senza-titolo-1-.gif
+header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love.png
 bannerheight: 10vmax
 logo: ../uploads/newicons.gif
 favicon: ../uploads/favicon.png
