--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-1-.gif
 bannerheight: 20vmax
-logo: ../uploads/newicons.gif
+logo: ../uploads/newicons-1-.gif
 favicon: ../uploads/favicon.png
 gridlayout: false
 fixednavbar: true
