Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,10 +2,10 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-1-.gif
+header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-2-.gif
 bannerheight: 20vmax
-logo: ../uploads/newicons-1-.gif
-favicon: ../uploads/favicon.png
+logo: ../uploads/1.png
+favicon: ../uploads/newicons.png
 gridlayout: false
 fixednavbar: true
 upzoom: true
