--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
 bannerheight: 10vmax
 logo: ../uploads/1.png
 favicon: ../uploads/2.png
-gridlayout: false
+gridlayout: true
 fixednavbar: true
 upzoom: true
 items: []
