--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
 bannerheight: 10vmax
 logo: ../uploads/1.png
-favicon: ../uploads/2.png
+favicon: ../uploads/android-chrome-192x192.png
 gridlayout: true
 fixednavbar: true
 upzoom: true
