--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
 bannerheight: 10vmax
 logo: ../uploads/newicons-4-.png
-favicon: ../uploads/progetto-senza-titolo-1-.png
+favicon: ../uploads/newicons.png
 gridlayout: false
 fixednavbar: true
 upzoom: false
