--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,12 +1,12 @@
-youtube: null
-soundcloud: null
-facebook: null
-flickr: null
-disqus_shortname: null
-email_address: null
-instagram: null
 twitter: null
+instagram: "@martinacurrenti_"
+facebook: Martina Currenti
+disqus_shortname: null
+flickr: null
+soundcloud: null
 pinterest: null
+youtube: null
 tumblr: null
 linkedin: null
-github: null
+email_address: null
+github: https://github.com/martinacurrenti/prettyinfont
