Update Settings “social”

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 twitter: null
 instagram: "@martinacurrenti_"
-facebook: Martina Currenti
+facebook: ""
 disqus_shortname: null
 flickr: null
 soundcloud: null
