--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,8 +4,8 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
 bannerheight: 10vmax
-logo: ../uploads/newicons-4-.png
-favicon: ../uploads/newicons.png
+logo: ../uploads/screenshot-2020-09-25-at-12.38.29.png
+favicon: ../uploads/favicon.png
 gridlayout: false
 fixednavbar: true
 upzoom: false
