--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
 bannerheight: 10vmax
-logo: ../uploads/flowe.png
+logo: ../uploads/1.png
 favicon: ../uploads/favicon.png
 gridlayout: false
 fixednavbar: true
