--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ../uploads/the-fonts-that-made-you-fall-in-love-3-.png
+header_feature_image: ../uploads/ciao-2-.png
 bannerheight: 10vmax
 logo: ../uploads/1.png
 favicon: ../uploads/favicon.png
