--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,8 +2,8 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ../uploads/looksgood.png
-bannerheight: 20vmax
+header_feature_image: ../uploads/ciao-2-.png
+bannerheight: 40vmax
 logo: ../uploads/1.png
 favicon: ../uploads/favicon.png
 gridlayout: false
