--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ header_feature_image: ../uploads/looksgood.png
 bannerheight: 10vmax
 logo: ../uploads/flowe.png
 favicon: ../uploads/favicon.png
-gridlayout: true
+gridlayout: false
 fixednavbar: true
 upzoom: false
 items: []
