Update Settings “social”

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -9,4 +9,4 @@ youtube: null
 tumblr: null
 linkedin: null
 email_address: null
-github: https://github.com/martinacurrenti/prettyinfont
+github: martinacurrenti/prettyinfont
