--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,7 +8,7 @@ backend:
 publish_mode: editorial_workflow
 show_preview_links: true
 display_url: https://prettyinfont.netlify.app
-logo_url: https://prettyinfont.netlify.app/uploads/face.jpg
+logo_url: https://prettyinfont.netlify.app/uploads/logo.jpg
 
 # Do NOT edit below this line
 
