--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/looksgood.png
 bannerheight: 10vmax
 logo: ../uploads/112png.png
-favicon: ../uploads/android-chrome-512x512.png
+favicon: ../uploads/3.png
 gridlayout: false
 fixednavbar: true
 upzoom: false
