--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ header_text: ""
 footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/looksgood.png
 bannerheight: 10vmax
-logo: ../uploads/112png.png
+logo: ../uploads/111.png
 favicon: ../uploads/3.png
 gridlayout: false
 fixednavbar: true
