Update Settings “social”

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 twitter: null
 instagram: https://www.instagram.com/martinacurrenti_/
-facebook: ""
+facebook: https://www.facebook.com/marticurrenti
 disqus_shortname: null
 flickr: null
 soundcloud: null
