Update Settings “social”

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 twitter: null
-instagram: https://www.instagram.com/martinacurrenti_/
+instagram: martinacurrenti_
 facebook: ""
 disqus_shortname: null
 flickr: null
