Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,9 +2,9 @@ title: Pretty in Font
 description: A blog about the most iconic romcoms and their titles' font
 header_text: ""
 footer_text: Copyright 2020 Martina Currenti
-header_feature_image: ../uploads/looksgood.png
+header_feature_image: ../uploads/ptershade.png
 bannerheight: 10vmax
-logo: ../uploads/machebeldisegno.png
+logo: ../uploads/machebeldisegno-copy.png
 favicon: ../uploads/3.png
 gridlayout: false
 fixednavbar: true
