--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ footer_text: Copyright 2020 Martina Currenti
 header_feature_image: ../uploads/andtwo.png
 bannerheight: 10vmax
 logo: ../uploads/machebeldisegno-copy.png
-favicon: ../uploads/3.png
+favicon: ../uploads/thelogo.png
 gridlayout: false
 fixednavbar: true
 upzoom: false
